--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,17 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "airbnb",
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "object-shorthand": "warn",
+    "no-unused-vars": "warn",
+    "prefer-destructuring": "off",
+    "react/prop-types": "off",
+    "react/jsx-props-no-spreading": "off"
+  }
 }
