--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,10 +8,12 @@
   ],
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "object-shorthand": "warn",
+    "object-shorthand": "off",
     "no-unused-vars": "warn",
     "prefer-destructuring": "off",
     "react/prop-types": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "func-names": "off",
+    "jsx-a11y/anchor-is-valid": "warn"
   }
 }
