--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
     "func-names": "off",
-    "jsx-a11y/anchor-is-valid": "warn"
+    "jsx-a11y/anchor-is-valid": "warn",
+    "no-else-return": "off"
   }
 }
