--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "react/jsx-props-no-spreading": "off",
     "func-names": "off",
     "jsx-a11y/anchor-is-valid": "warn",
-    "no-else-return": "off"
+    "no-else-return": "off",
+    "react/jsx-no-constructed-context-values": "warn"
   }
 }
