--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "@next/font": "^13.1.6",
+    "axios": "^1.3.2",
+    "js-cookie": "^3.0.1",
     "next": "13.1.6",
+    "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading": "^2.0.3",
@@ -24,6 +27,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^13.1.6",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.2.1",
