--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
     "func-names": "off",
     "jsx-a11y/anchor-is-valid": "warn",
     "no-else-return": "off",
-    "react/jsx-no-constructed-context-values": "warn"
+    "react/jsx-no-constructed-context-values": "warn",
+    "no-param-reassign": "off",
+    "default-param-last": "off"
   }
 }
