--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
   "dependencies": {
     "@next/font": "^13.1.6",
     "axios": "^1.3.2",
+    "chart.js": "^4.2.0",
     "js-cookie": "^3.0.1",
     "next": "13.1.6",
     "path": "^0.12.7",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-loading": "^2.0.3",
-    "recharts": "^2.3.2"
+    "react-redux": "^8.0.5",
+    "recharts": "^2.3.2",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
