--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "recharts": "^2.3.2",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "sass": "^1.58.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
