--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.2",
     "chart.js": "^4.2.0",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
     "next": "13.1.6",
     "path": "^0.12.7",
     "react": "18.2.0",
