--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.5",
