--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_TEMANJABAR_API=http://localhost/temanjabar/public/api
+NEXT_PUBLIC_TEMANJABAR_API=http://192.168.1.9/temanjabar/public/api
