--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "no-else-return": "off",
     "react/jsx-no-constructed-context-values": "warn",
     "no-param-reassign": "off",
-    "default-param-last": "off"
+    "default-param-last": "off",
+    "no-underscore-dangle": "off"
   }
 }
