--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "next": "13.1.6",
-    "path": "^0.12.7",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
@@ -25,11 +24,9 @@
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.5",
-    "recharts": "^2.3.2",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.2",
-    "sass": "^1.58.0"
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
@@ -44,7 +41,9 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.2",
+    "sass": "^1.58.0",
     "tailwindcss": "^3.2.4"
   }
 }
