fix: fix bug on image login background which cut when screen more than 1280 pixel in login page

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_TEMANJABAR_API=http://192.168.1.9/temanjabar/public/api
+NEXT_PUBLIC_TEMANJABAR_API=http://173.103.11.126/temanjabar/public/api
