--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_TEMANJABAR_API=http://173.103.11.126/temanjabar/public/api
+NEXT_PUBLIC_TEMANJABAR_API=http://173.103.11.126:8000/api
+NEXT_PUBLIC_TALIKUAT_API=http://173.103.11.126:9000/api
