--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,10 @@
     "react/jsx-no-constructed-context-values": "warn",
     "no-param-reassign": "off",
     "default-param-last": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "no-plusplus": "off",
+    "class-methods-use-this": "off",
+    "no-loop-func": "off",
+    "import/prefer-default-export": "off"
   }
 }
