--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/font": "^13.1.6",
     "axios": "^1.3.2",
     "chart.js": "^4.2.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "next": "13.1.6",
