--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.5",
+    "react-select": "^5.7.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2"
