--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@next/font": "^13.1.6",
+    "@react-spring/web": "^9.7.0",
     "axios": "^1.3.2",
     "chart.js": "^4.2.0",
     "chartjs-plugin-datalabels": "^2.2.0",
