feat: update env base url

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_TEMANJABAR_API=https://tk.temanjabar.net/api
+NEXT_PUBLIC_TEMANJABAR_API=https://tj.temanjabar.net/api
+NEXT_PUBLIC_TALIKUAT_API=https://tk.temanjabar.net/api
